2007-05-14  Christian Persch  <chpe@gnome.org>

	* docs/reference/glib/tmpl/string_utils.sgml: Improve g_strerror and
	g_strsignal docs. Bug #438293.

2007-05-13  Tor Lillqvist  <tml@novell.com>

	* glib/gwin32.h: Drop the pipe() macro. Defining macros outside of
	its namespace that look like POSIX functions is not GLib's
	business in my opinion. This means pipe()-using code that has
	relied on this definition will need changing to call _pipe() on
	Windows, and make the decision itself on what size pipe buffer to
	use, and whether to use text or binary mode, and whether the pipe
	handles should be inheritable or not.

	* glib/gspawn-win32.c (make_pipe): Use _pipe() instead of pipe().

2007-05-11  Matthias Clasen  <mclasen@redhat.com>

	* glib/goption.c: Allow G_OPTION_ARG_CALLBACK for 
	G_OPTION_REMAINING.  (#437297, Dave Benson)

	* tests/option-test.c: Add a test for this.

2007-05-04  Dan Winship  <danw@novell.com>

	* glib/gkeyfile.c (g_key_file_get_boolean)
	(g_key_file_get_boolean_list, g_key_file_get_integer)
	(g_key_file_get_integer_list, g_key_file_get_double)
	(g_key_file_get_double_list): Document the error return values
	rather than calling them undefined. #435885.

2007-05-03  Behdad Esfahbod  <behdad@gnome.org>

	* glib/glib.symbols:
	* glib/gunicode.h:
	* glib/guniprop.c (g_unichar_ismark):
	Add g_unichar_ismark(). Patch from Yevgen Muntyan. Fixes #339991.

2007-05-03  Matthias Clasen <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.13.1 ===

2007-05-02  Matthias Clasen <mclasen@redhat.com>

	* tests/threadpool-test.c:  Stop unused threads before
	the last test, to make the test terminate reliably.

	* NEWS: Updates

2007-05-02  Marco Barisione <marco@barisione.org>

	* glib/gregex.c: Made more clear that the string passed to the match
	functions cannot be freed before using g_match_info_fetch() and
	similar functions, and fixed a typo.

2007-04-30  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib.symbols: