@@ -1,3 +1,8 @@
+2007-05-14  Matthias Clasen  <mclasen@redhat.com>
+
+	* glib/running.sgml: Document g_slice_debug_tree_statistics
+	as debug-only functionality.
+
 2007-05-11  Matthias Clasen  <mclasen@redhat.com>
 
 	* glib/tmpl/option.sgml: Document new G_OPTION_ARG_REMAINING
